added css styles to the links and github form

--- a/index.css
+++ b/index.css
@@ -11,3 +11,27 @@
 ul {
   list-style: none;
 }
+#github-form input[type="submit"]{
+  background-color: rgb(56, 190, 190);
+  border: none;
+  border-radius: 20px;
+}
+
+#github-form input[type="text"]{
+  border-radius: 20px;
+  border-style: solid;
+}
+
+#github-form input[type="text"],#github-form input[type="submit"]{
+  font-size: large;
+  padding: 15px;
+}
+a{
+  background-color: rgb(22, 146, 146);
+  color:black;
+  padding: 10px;
+  text-decoration: none;
+  border-radius: 20px;
+  float: right;
+  margin-top: 30%;
+}
